--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
   testCompile 'junit:junit:4.12'
   compile 'io.reactivex:rxjava:1.1.6'
   compile 'io.reactivex:rxandroid:1.2.1'
+  //facebook connectivity manager
+  compile 'com.facebook.network.connectionclass:connectionclass:1.0.1'
 
   //timber for logging
   compile 'com.jakewharton.timber:timber:4.3.1'
