handle network connectivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.knolskape.app.apod">
 
   <uses-permission android:name="android.permission.INTERNET"/>
@@ -18,7 +19,15 @@
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
-    </activity>>
+    </activity>
+
+    <receiver android:name=".connectivity.ConnectivityChangeReceiver">
+      <intent-filter>
+        <action
+            android:name="android.net.conn.CONNECTIVITY_CHANGE"
+            tools:ignore="BatteryLife"/>
+      </intent-filter>
+    </receiver>
   </application>
 
 </manifest>
